objects/Exam__c.object
<CustomObject>
    <description>Exam object</description>
    <fields>
        <fullName>Exam_Date__c</fullName>
        <label>Exam Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exam_Name__c</fullName>
        <label>Exam Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADM</fullName>
                </value>
                <value>
                    <fullName>PD1</fullName>
                </value>
                <value>
                    <fullName>ADV ADM</fullName>
                </value>
                <value>
                    <fullName>SALES</fullName>
                </value>
                <value>
                    <fullName>SERVICE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Email__c</fullName>
        <label>User Email</label>
        <type>Email</type>
    </fields>
    <label>Exam</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Drive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exam</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>